# actix-blueprint

./: Cargo.toml  README.md  package.json  tsconfig.json
src/: main.rs
static/: index.html  style.css
web-src/: index.ts  types.ts
