[package]
name = "actix-blueprint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = { version = "0.6", features = ["cookie-session"] }

env_logger = "0.9"
log = "0.4"