[package]
name = "actix-blueprint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-files = "0.6"
actix-session = { version = "0.6", features = ["cookie-session"] }

openssl = "0.10"

env_logger = "0.9"
log = "0.4"