[package]
name = "actix-blueprint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl", "macros"] }
actix-files = "0.6"
actix-session = { version = "0.6", features = ["cookie-session"] }
actix = "0.13"
actix-web-actors = "4.1"
async-io = "1.6"

openssl = "0.10"

serde = "1.0"
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
futures = "0.3"

mediasoup = "0.9"